# entropy

./: .gitignore  .travis.yml  README.md  Setup.hs  cabal.haskell-ci  configure  configure.ac  entropy.buildinfo.in  entropy.cabal
.github/workflows/: haskell-ci.yml
System/: Entropy.hs  EntropyGhcjs.hs  EntropyNix.hs  EntropyWindows.hs  EntropyXen.hs
cbits/: getrandom.c  random_initialized.c  rdrand.c  rdrand.h
