name:           entropy
version:        0.2.2
license:        BSD3
license-file:   LICENSE
copyright:      Thomas DuBuisson <thomas.dubuisson@gmail.com>
author:         Thomas DuBuisson <thomas.dubuisson@gmail.com>
maintainer:     Thomas DuBuisson <thomas.dubuisson@gmail.com>
description:    A platform independent method to obtain cryptographically strong entropy 
                (urandom on Linux, CryptAPI on Windows, patches welcome). 
                Users looking for cryptographically strong (number-theoretically
                sound) PRNGs should see the 'DRBG' package too!
synopsis:       A platform independent entropy source
category:       Data, Cryptography
homepage:       https://github.com/TomMD/entropy
bug-reports:    https://github.com/TomMD/entropy/issues
stability:      stable
build-type:     Custom
cabal-version:  >= 1.6
tested-with:    GHC == 6.12.1
data-files:
extra-source-files: ./cbits/rdrand.c
                  , ./cbits/rdrand.h

Library
  Build-Depends: base == 4.*, bytestring
  ghc-options:  -Wall -O2
  hs-source-dirs:
  exposed-modules: System.Entropy
  other-modules:
  if arch(x86_64)
    cpp-options: -Darch_x86_64
    c-sources:    cbits/rdrand.c
    include-dirs: cbits
  if os(windows)
    cpp-options: -DisWindows
    extra-libraries: advapi32

source-repository head
    type:       git
    location:   https://github.com/TomMD/entropy
